--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGO_URL=mongodb+srv://bhayron:secretf5@cluster0.jufe8.mongodb.net/SpaceFlightNews?retryWrites=true&w=majority
+
+API_EXTERNA=https://api.spaceflightnewsapi.net/v3/articles
