testing crud articles

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 MONGO_URL=mongodb+srv://user:password@cluster0.jufe8.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
-
+MONGO_TEST_CONNECTION_URI=mongodb+srv://user:password@cluster0.jufe8.mongodb.net/SpaceFlightNewsTest?retryWrites=true&w=majority
 
 API_EXTERNA=
