--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 MONGO_URL=mongodb+srv://bhayron:secretf5@cluster0.jufe8.mongodb.net/SpaceFlightNews?retryWrites=true&w=majority
 MONGO_TEST_CONNECTION_URI=mongodb+srv://bhayron:secretf5@cluster0.jufe8.mongodb.net/SpaceFlightNewsTest?retryWrites=true&w=majority
+PORT=3000
 
 API_EXTERNA=https://api.spaceflightnewsapi.net/v3/articles
